
2000-07-17  Daniel Berlin  <dberlin@redhat.com>

	* valops.c (value_struct_elt): Change error message

2000-07-17  matthew green  <mrg@redhat.com>

	* config/sparc/nm-nbsd.h (GDB_GREGSET_T, GDB_FPREGSET_T): Define.

Mon Jul 17 13:08:10 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* values.c (value_as_pointer): When VAL is an integer, explictly
 	cast to a pointer before converting to a CORE_ADDR.
	* gdbtypes.c (build_gdbtypes): For builtin_type_ptr, construct a
 	real void pointer instead of an integer.

2000-07-15  Daniel Berlin  <dberlin@redhat.com>

	* valops.c (typecmp):  Seperate loop into two, add support for
	references. This way, we can  say a reference to a pointer to a
	char is	compatible with a pointer to a char. Before, this would
	not be true.

2000-07-14  Nicholas Duffek  <nsd@redhat.com>

	* ppcbug-rom.c (ppcbug_regnames[]): Make array size implicit.
	* rs6000-tdep.c (DEFAULT_LR_SAVE): Move to config/*/tm-*.h.
	(rs6000_gdbarch_init): Use generic_pc_in_call_dummy instead of
	rs6000_pc_in_call_dummy.
	* config/rs6000/tm-rs6000.h (DEFAULT_LR_SAVE): Move here from
	rs6000-tdep.c.
	* config/powerpc/tm-ppc-eabi.h: Remove various definitions
	handled by multi-arched rs6000-tdep.c.

2000-07-14  Nick Clifton  <nickc@cygnus.com>

	* config/mcore/tm-mcore.h (SKIP_PROLOGUE): Fix defintion to avoid
	assignment.

2000-07-13  Michael Snyder  <msnyder@cleaver.cygnus.com>

	* parse.c: Include inferior.h.

2000-07-12  Michael Snyder  <msnyder@cleaver.cygnus.com>

	* regcache.c (registers_changed, registers_fetched): Use 
	ARCH_NUM_REGS directly, eliminating an unnecessary variable.

	This change adds pseudo-register capability to GDB.
	Pseudo-registers are handled like registers, but they
	don't come from or live on the target.  They may be 
	aliases for an existing register, or they may be computed.
	* inferior.h (NUM_PSEUDO_REGISTERS): Define default of zero.
	(ARCH_FETCH_PSEUDO_REGISTERS): Define default of no-op.